Add most of the feedback

--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
@@ -24,11 +24,11 @@ De onderstaande screenshots laten zien dat ik tijdens mijn stage gebruik heb gem
 ^Een screenshot van een nieewe SVN commit. Genomen 9-12-2020^
 
 ## Feedback bedrijfsbegeleider/collega
-==TODO feedback==
+*Je hebt laten zien dat je met SVN uit de voeten kunt en dat je SVN hebt leren doorgronden. Er zijn nog een hoop opties die je niet hebt verkent en ook niet nodig hebt gehad. Zo kan SVN ook distributed (en dus offline) gebruikt worden, maar onze organisatie heeft zoals je aangeeft eigenlijk die behoefte niet.*
 
-## Reflectie
-==TODO reflectie feedback==  
-  
+## Reflectie  
 Het was erg interresant om voor de verandering met een ander versiebeheersysteem te werken dan dat ik normaal doe. Ik weet nu beter waar ik rekening mee moet houden als ik in de toekomst ooit een versiebeheersysteem moet uitkiezen. Ook heb ik natuurlijk veel geleerd over hoe SVN werkt, en wat de verschillen zijn tussen SVN en Git. Deze kennis zou ik eventueel later kunnen gebruiken bij mijn werk, mocht ik bij een bedrijf gaan werken dat SVN gebruikt. Ik vind daarom ook dat ik dit leerdoel heb behaald.
+
+Zoals mijn bedrijfsbegeleider hierboven heeft gezegd, is het wel zo dat ik helaas niet alle onderdelen van SVN die ik nog niet heb gebruikt. Zo heb ik bijvoorbeeld wel een nieuwe branch gemaakt, maar ik heb deze nooit gemerged met de _trunk_ van de SVN repository. Dit mede omdat het CRM migratie project tijdens mijn stage niet zodanig was afgerondt dat dit veilig kon gebeuren. Ik verwacht echter niet dat dit process veel zal verschillen met het merge process van Git, waardoor ik het gemakkelijk zou kunnen oppakken.
 
 Tijdens mijn onderzoek naar SVN ben ik ook nog een ander versiebeheersysteem tegengekomen, genaamd [Mercurial](https://www.mercurial-scm.org/). Ik ben van plan om ook deze in de toekomst eens uit te proberen.
