--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -25,11 +25,9 @@ Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik besc
 Het document is [hier](Content/Stage3/Bewijsmateriaal/6) te vinden.
 
 ## Feedback bedrijfsbegeleider/collega
-==TODO feedback==
+*Ik heb hier niet echt feedback op omdat het lastig is te toetsen in hoeverre dit aansluit bij ons.*
 
 ## Reflectie
-==TODO reflectie feedback==
-
 Met de kennis die ik tijdens mijn stage heb opgedaan, is het mij gelukt om een ontwerpdocument te schrijven voor mijn eerder genoemde idee. Hierdoor heb ik een goed beeld gekregen over wat ik wil dat het systeem zal gaan doen, en ik weet nu globaal hoe dit systeem ook daadwerkelijk in elkaar zal gaan zitten. Dit is precies wat ik hoopte, en daarom vind ik dat ik dit leerdoel behaald heb.
 
 Ik verwacht dat als ik eenmaal met dit project ga beginnen, ik nog enkele verbeterpunten in het document tegen kom. Waarschijnlijk zijn er bepaalde onderdelen die ik alsnog over het hoofd heb gezien, die ik dan achteraf nog in het document moet verwerken. Met de kennis die ik nu heb denk ik echter dat dit geen probleem zal zijn.
