--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
@@ -27,11 +27,9 @@ Als onderdeel van mijn stageopdracht heb ik het CRM systeem van Ranshuijsen deel
 Ook heb ik Blazor WASM gebruikt tijdens het opzetten van mijn portfoliowebsite. De broncode van deze website is te vinden op [GitHub](https://github.com/TehNolz/Portfolio).
 
 ## Feedback bedrijfsbegeleider/collega
-==TODO feedback==
+*Je laat zien dat je snel nieuwe technieken kan adopteren. Dat komt ook omdat je zoals eerder aangegeven nieuwsgierig bent naar nieuwe technieken.*
 
 ## Reflectie
-==TODO reflectie feedback==
-
 Ik heb dankzij dit leerdoel genoeg kennis over Blazor opgedaan, dat ik zeker weet dat ik het bij mijn eigen projecten kan gaan gebruiken. Dit ben ik ook zeker van plan, omdat ik Blazor een erg leuke technologie vindt om mee te werken.
 
 Wel zou het makkelijker zijn geweest als ik van te voren al wat kennis over ASP.NET Core had, omdat Blazor hier veel onderdelen van gebruikt. Ik had echter nauwelijks met ASP.NET Core gewerkt voordat ik met mijn stage begon, waardoor ik een stuk kennis miste. Desondanks is het mij toch gelukt om de basis van Blazor onder de knie te krijgen. Persoonlijk vind ik daarom ook dat ik dit leerdoel behaald heb.
