--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/9.md
@@ -29,10 +29,8 @@ Ranshuijsen maakt gebruik van _Kaizen Cockpit_. Dit is een soort to-do systeem v
   
 De _Kaizen Cockpit_ van Ranshuijsen staat verbonden met het urenregistratie deel van het CRM systeem. Via deze koppeling kunnen medewerkers vanuit de _Kaizen Cockpit_ aangeven aan welke taken zij op dat moment werken, zodat het CRM kan bijhouden hoe lang zij hiermee zijn beziggeweest.
 
-## Feedback bedrijfsbegeleider/collega
-==TODO feedback==
+## Feedback bedrijfsbegeleider
+*Ik heb hier niet echt feedback op anders dan dat je dat keurig gedaan hebt*
 
 ## Reflectie
-==TODO reflectie feedback==
-
 Na het afronden van deze stage heb ik een veel beter beeld over wat voor een regels en procedures ik kan verwachten als ik later bij een softwarebedrijf zal werken. Natuurlijk zal het bedrijf waar ik later zal werken waarschijnlijk andere regels en procedures hanteren, maar ik verwacht dat de meeste ongeveer op hetzelfde neer zullen komen. Ik verwacht wel dat er een aantal kleinere regels of procedures zijn die ik gemist heb, maar ik denk dat ik de belangrijkste regels hierboven genoemd heb. Ik vind daarom ook dat ik dit leerdoel behaald heb.
