--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
@@ -39,11 +39,10 @@ Na het uitvoeren van dit scriptbestand, is de website geheel up-to-date. Mocht i
 Door dit script te schrijven heb ik een goed beeld gekregen van hoe een _CI/CD pipeline_ ongeveer werkt. Deze kennis kan ik later ook weer hergebruiken tijdens mijn werk of voor mijn hobbyprojecten.
 
 ## Feedback bedrijfsbegeleider/collega
-==TODO feedback==
+*Het is goed om te zien dat je het deployment proces bij Ranshuijsen goed hebt leren kennen en begrijpt waarom wij dingen doen zoals we ze doen. Jouw leergierigheid om nieuwe technieken te onderzoeken en in de praktijk te brengen maakt dat je snel dit soort kennis tot je neemt.*
 
-## Reflectie
-==TODO reflectie feedback==  
-  
+
+## Reflectie  
 Dankzij het onderzoek dat ik heb gedaan als onderdeel van dit leerdoel, heb ik meer geleerd over hoe (updates voor) systemen kunnen worden uitgerold en klaargemaakt voor gebruik. Ik ben er zeker van dat deze kennis later tijdens mijn werk erg handig zal zijn, omdat elk softwarebedrijf hier wel mee te maken krijgt. Ook zal de kennis handig zijn voor mijn eigen projecten. Ik ben zelfs al bezig geweest om een _GitHub Actions_ script op te zetten voor een hobbyproject waar ik op het moment mee bezig ben, zodat ik nieuwe versies hiervan automatisch kan testen en uitrollen naar een server. Om deze redenen vind ik dan ook dat ik dit leerdoel heb behaald.
 
 Ik ben echter nog niet klaar met het leren over dit onderwerp. Tot nu toe heb ik alleen maar onderzocht hoe ik een systeem kan uitrollen naar 1 server. Grotere systemen zijn echter vaak verspreid over meerdere servers, wat het uitrollen van updates weer wat ingewikkelder maakt. Ik hoop dat ik tijdens mijn afstudeerstage de mogelijkheid krijg om een dergelijk systeem te onderzoeken.
