--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
@@ -21,11 +21,12 @@ Na het afronden van dit onderzoek had ik een veel beter beeld over hoe ASP.NET p
 Als bewijsmateriaal voor dit leerdoel, heb ik een document opgezet die kort de algemene structuur van het CRM systeem beschrijft. Het bevat informatie over de mappenstructuur, over een aantal verschillende datatypes die in het systeem wordt gebruikt, en over de opbouw van de paginas. Omdat dit document gevoellige gegevens over het systeem bevat, kan ik het helaas niet op deze website plaatsen.
 
 ## Feedback bedrijfsbegeleider/collega
-==TODO feedback==
+*Het is een hele prestatie dat je het voor elkaar hebt gekregen om de migratie zo snel te realiseren. We waren allen wel een beetje sceptisch of dit zo snel en makkelijk zou gaan lukken. De snelheid leidde er wel toe dat je soms nog iets te weinig over verschillende oplossingsrichtingen na hebt kunnen denken, maar boven verwachting van een 3de jaars stagiair.*  
+  
+*Probeer bij het analyseren een brede blik te houden zodat verschillende oplossingsrichtingen mogelijk blijven.*
 
-## Reflectie
-==TODO reflectie feedback==
 
+## Reflectie  
 Ik heb tijdens het werken aan dit leerdoel veel kennis opgedaan over hoe ik een ASP.NET systeem moet analyseren. Omdat ASP.NET een zeer populaire technologie is, verwacht ik dat deze kennis later erg handig zal zijn bij mijn werk. Mocht ik later bij een bedrijf gaan werken waar gebruik wordt gemaakt van ASP.NET, dan ben ik er vrij zeker van dat ik snel mijn weg zal kunnen vinden binnen de systemen die zij ontwikkelen. Ik vind daarom ook dat ik dit leerdoel heb behaald.
 
 Er zijn echter veel andere soorten systemen die op compleet andere manieren zijn opgebouwd. Als ik deze systemen wil analyseren, dan zal ik dat waarschijnlijk op een andere manier moeten aanpakken dan bij een ASP.NET systeem. Daarom wil ik in de toekomst een dergelijk systeem gaan analyseren om zo extra ervaring op te doen. Wellicht dat ik hier tijdens mijn afstudeerstage de kans voor krijg.
