Add remaining feedback

--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/10.md
@@ -12,7 +12,7 @@ Ook tijdens het bouwen van deze portfoliowebsite heb ik extra aandacht besteed a
 ## Bewijsmateriaal
 Om dit leerdoel te behalen heb ik tijdens het opzetten van alle eerder genoemde documenten, mijn [Stageplan](Content/Stage3/Stageplan), en dit Portfolio meer aandacht besteed aan de opmaak. Deze documenten dienen daarom ook als bewijsmateriaal voor dit leerdoel.
 
-## Feedback bedrijfsbegeleider/collega
+## Feedback bedrijfsbegeleider
 *Je hebt denk ik inmiddels ervaren dat hoe iets eruit ziet (ook een onderdeel van design) belangrijk kan zijn en je hebt hier zeker stappen in gemaakt. Toch ben je er dan niet. Er zijn veel facetten van design die van belang zijn, denk aan UI en UX. Voor jou specifiek als techneut in hart en nieren moet je proberen om hier aandacht voor te blijven houden en ook hier in te verdiepen.*
 
 ## Reflectie
