--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/2.md
@@ -38,7 +38,7 @@ Na het uitvoeren van dit scriptbestand, is de website geheel up-to-date. Mocht i
 
 Door dit script te schrijven heb ik een goed beeld gekregen van hoe een _CI/CD pipeline_ ongeveer werkt. Deze kennis kan ik later ook weer hergebruiken tijdens mijn werk of voor mijn hobbyprojecten.
 
-## Feedback bedrijfsbegeleider/collega
+## Feedback bedrijfsbegeleider
 *Het is goed om te zien dat je het deployment proces bij Ranshuijsen goed hebt leren kennen en begrijpt waarom wij dingen doen zoals we ze doen. Jouw leergierigheid om nieuwe technieken te onderzoeken en in de praktijk te brengen maakt dat je snel dit soort kennis tot je neemt.*
 
 
