--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/3.md
@@ -20,7 +20,7 @@ Na het afronden van dit onderzoek had ik een veel beter beeld over hoe ASP.NET p
 
 Als bewijsmateriaal voor dit leerdoel, heb ik een document opgezet die kort de algemene structuur van het CRM systeem beschrijft. Het bevat informatie over de mappenstructuur, over een aantal verschillende datatypes die in het systeem wordt gebruikt, en over de opbouw van de paginas. Omdat dit document gevoellige gegevens over het systeem bevat, kan ik het helaas niet op deze website plaatsen.
 
-## Feedback bedrijfsbegeleider/collega
+## Feedback bedrijfsbegeleider
 *Het is een hele prestatie dat je het voor elkaar hebt gekregen om de migratie zo snel te realiseren. We waren allen wel een beetje sceptisch of dit zo snel en makkelijk zou gaan lukken. De snelheid leidde er wel toe dat je soms nog iets te weinig over verschillende oplossingsrichtingen na hebt kunnen denken, maar boven verwachting van een 3de jaars stagiair.*  
   
 *Probeer bij het analyseren een brede blik te houden zodat verschillende oplossingsrichtingen mogelijk blijven.*
