--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/4.md
@@ -12,7 +12,7 @@ Om dit leerdoel te behalen heb ik besloten om een kort adviesrapport te schrijve
 
 Naar mijn mening maakt Blazor het zo eenvoudig om websites te bouwen, dat ik het zelfs zou aanranden aan ontwikkelaars die weinig interesse hebben in frontend development. Blazor is zeer makkelijk op te pakken, waardor het mogelijk is om binnen enkele minuten een simpele interactieve website in elkaar te zetten. Zelfs voor C# ontwikkelaars die weinig ervaring hebben met het bouwen van websites zal het eenvoudig zijn om Blazor te gebruiken.
 
-## Feedback bedrijfsbegeleider/collega
+## Feedback bedrijfsbegeleider
 *Het advies wat je gegeven hebt bevestig hetgeen onze developers ook vinden. Het advies zelf had ook specifieker kunnen zijn als het gaat om het CRM product. Meegewogen dat het meer is dan een website en een reeds bestaand product is.* 
 
 ## Reflectie  
