--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/5.md
@@ -9,13 +9,11 @@ Helaas bleek Ranshuijsen weinig gebruik te maken van _Unit Tests_, waardoor ik d
 # Bewijsmateriaal
 Voor dit leerdoel heb ik een testplan opgezet waarin het user management gedeelte van het CRM wordt getest. Omdat er echter gevoelige informatie in dit document staan, kan ik het niet op deze website plaatsen.
 
-## Feedback bedrijfsbegeleider/collega
-==TODO feedback==
+## Feedback bedrijfsbegeleider
+*Zoals vaker bij Ranshuijsen zijn testplannen niet heel uitgebreid met een focus op directe testscenario's. Er zijn echter ook software development organisaties waar het testplan veel meer bevat dan sec de te testen scenario's, maar waarbij bijv ook kwaliteitscriteria en de uitrol van de testen zelf onderdeel is van dat plan. Daar kan je bij een vervolg opdracht mogelijk nog van leren.*
 
 ## Reflectie
-==TODO reflectie feedback==
+Uiteindelijk heb ik helaas niet zo veel over dit onderwerp geleerd als ik had gehoopt. Tijdens mijn opleiding heb ik al enkele testplannen moeten schrijven, en de testplannen van Ranshuijsen verschillen hier weinig mee. Ook heb ik weinig geleerd over het schrijven van _Unit Tests_, omdat Ranshuijsen hier zelf weinig gebruik van maakt. Ik had gehoopt dat zij een aantal technieken gebruikte waar ik nog nooit van had gehoord, maar uiteindelijk bleek dit niet het geval te zijn. Zoals mijn bedrijfsbegeleider hierboven ook heeft genoemd, kan ik hier waarschijnlijk later bij een andere opdracht wel meer over leren.
 
-Uiteindelijk heb ik helaas niet zo veel over dit onderwerp geleerd als ik had gehoopt. Tijdens mijn opleiding heb ik al enkele testplannen moeten schrijven, en de testplannen van Ranshuijsen verschillen hier weinig mee. Ook heb ik weinig geleerd over het schrijven van _Unit Tests_, omdat Ranshuijsen hier zelf weinig gebruik van maakt. Ik had gehoopt dat zij een aantal technieken gebruikte waar ik nog nooit van had gehoord, maar uiteindelijk bleek dit niet het geval te zijn.
-
-Persoonlijk vind ik daarom dat ik dit leerdoel niet gehaald heb. Ik hoop dat ik later in mijn studie of tijdens mijn werk hier wel meer over kan leren.
+Omdat ik weinig over dit onderwerp heb geleerd, vindt ik persoonlijk dat ik dit leerdoel niet behaald heb.
 
