--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/6.md
@@ -24,7 +24,7 @@ Als bewijsmateriaal voor dit leerdoel heb ik een document opgezet waarin ik besc
 
 Het document is [hier](Content/Stage3/Bewijsmateriaal/6) te vinden.
 
-## Feedback bedrijfsbegeleider/collega
+## Feedback bedrijfsbegeleider
 *Ik heb hier niet echt feedback op omdat het lastig is te toetsen in hoeverre dit aansluit bij ons.*
 
 ## Reflectie
