--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/7.md
@@ -27,7 +27,7 @@ Voor mijn stageopdracht heb ik een *UserService* gemaakt. Via deze service kunne
 Zoals eerder vermeld, is deze website gemaakt met Blazor. Blazor heeft het Dependency Injection design pattern al geimplementeerd, en geeft ontwikkelaars de mogelijkheid om hier verder op te bouwen. Dit heb ik gedaan door een  *DocumentService* te bouwen. Deze service geeft mij de mogelijkheid om in mijn gehele applicatie _Markdown_ bestanden te laden en om te zetten naar HTML, zodat ik ze op een pagina kan laten zien.
 
 
-## Feedback bedrijfsbegeleider/collega
+## Feedback bedrijfsbegeleider
 *Je hebt aangetoond niet alleen te snappen hoe het design pattern werkt met theorie, maar ook door dit in de praktijk correct toe te passen. Let op dat design patterns zelf niet "het beste" of "goed" zijn. Het zijn gemaakte keuzes door een architectect (of developer) die richting geven aan de rest van het systeem. Ieder systeem kan zijn eigen "beste" design patterns hebben.* 
 
 ## Reflectie
