--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/8.md
@@ -26,7 +26,7 @@ Als onderdeel van mijn stageopdracht heb ik het CRM systeem van Ranshuijsen deel
 
 Ook heb ik Blazor WASM gebruikt tijdens het opzetten van mijn portfoliowebsite. De broncode van deze website is te vinden op [GitHub](https://github.com/TehNolz/Portfolio).
 
-## Feedback bedrijfsbegeleider/collega
+## Feedback bedrijfsbegeleider
 *Je laat zien dat je snel nieuwe technieken kan adopteren. Dat komt ook omdat je zoals eerder aangegeven nieuwsgierig bent naar nieuwe technieken.*
 
 ## Reflectie
