--- a/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
+++ b/Portfolio/Pages/Content/Stage3/Leerdoelen/1.md
@@ -23,7 +23,7 @@ De onderstaande screenshots laten zien dat ik tijdens mijn stage gebruik heb gem
 ![](\\Assets\\Images\\SVN_new_commit.png)
 ^Een screenshot van een nieewe SVN commit. Genomen 9-12-2020^
 
-## Feedback bedrijfsbegeleider/collega
+## Feedback bedrijfsbegeleider
 *Je hebt laten zien dat je met SVN uit de voeten kunt en dat je SVN hebt leren doorgronden. Er zijn nog een hoop opties die je niet hebt verkent en ook niet nodig hebt gehad. Zo kan SVN ook distributed (en dus offline) gebruikt worden, maar onze organisatie heeft zoals je aangeeft eigenlijk die behoefte niet.*
 
 ## Reflectie  
